# j-archive-parser

./: .gitignore  LICENSE  README.md  j-archive-parser.cabal
app/: Main.hs
src/: Lib.hs
src/JArchiveParser/: Cache.hs  GameParser.hs  Model.hs  Models.hs  Regex.hs  Request.hs  SeasonParser.hs  UrlGenerator.hs
src/JArchiveParser/Arrow/: Util.hs
