name:                j-archive-parser
version:             0.1.0.0
synopsis:            Parse j-archive.com
description:         Please see README.md
homepage:            https://github.com/githubuser/j-archive-parser#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016 Josh Clayton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , JArchiveParser.Request
                     , JArchiveParser.GameParser
                     , JArchiveParser.Model
                     , JArchiveParser.Regex
                     , JArchiveParser.Arrow.Util
                     , JArchiveParser.UrlGenerator
  build-depends:       base >= 4.7 && < 5
                     , hxt-css
                     , hxt
                     , hxt-http
                     , regex-tdfa
                     , HTTP
                     , parallel-io
  default-language:    Haskell2010
  other-extensions:    Arrows

executable j-archive-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , j-archive-parser
                     , parallel-io
  default-language:    Haskell2010

test-suite j-archive-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , j-archive-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/j-archive-parser
